# Borb-CAM

./: README.md
Documents/: Diagram.drawio
Software/: Makefile  config.txt  main(Demo Ready).cpp  main(Further Cull Test).cpp  main(Guide).cpp  main(NearestN Stable).cpp  main(Predemobackup).cpp  main(Predome w Backend).cpp  main.cpp  oldmain.cpp
Software/Mains/: main(Culling Test).cpp  main(Technically Working).cpp  main(Testing ATM).cpp  mainMinimised.cpp  maintemp.cpp  oldmain2.cpp  oldmain3.cpp
Software/Testing/testing/: main.cpp
Software/oldsrc/: CMakeLists.txt  camview.cpp  camview.h  components.h  main.cpp  meshtools.cpp  meshtools.h  model.mtl  pathplanner.h  shader.cpp
Software/oldsrc/testing(Frontend_Backend)/app/backend/: backend.h
Software/src/: Debug.txt  OwO.gcode  OwO.nc  appmanagement.cpp  appmanagement.h  camview.cpp  camview.h  components.cpp  components.h  main.cpp  meshmanagement.cpp  meshmanagement.h  meshtools.h  model.stl  pathing.cpp  pathing.h  shader.cpp  shader.h  slice.cpp  slice.h
Software/src/app/backend/: backend.cpp  backend.h
Software/src/app/frontend/: frontend.cpp  frontend.h
Software/src/core/appmanagement/: appmanagement.cpp
Software/src/core/meshmanagement/: meshmanagement.cpp  meshmanagement.h
Software/src/core/pathing/: pathing.cpp  pathing.h
Software/src/core/slice/: slice.cpp  slice.h
Software/src/output/: OwO.nc
Software/testing(Frontend_Backend)/: main.cpp
Software/testing(Frontend_Backend)/app/backend/: backend.cpp
Software/testing(Frontend_Backend)/app/frontend/: frontend.cpp  frontend.h
